--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -39,7 +39,7 @@ body {
 -------------------------------------------------- */
 
 /* Carousel base class */
-.carousel {
+.carousel .jumbotron{
   height: 500px;
   margin-bottom: 60px;
 }
