--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,4 @@
+{% set nav = "contact" %}
 {% extends "body_wrapper.html" %}
 {% block body %}
 <div class="container">
@@ -8,17 +9,18 @@
   <div class="row featurette">
     <div class="col-md-7">
       <h2>Kontakt</h2>
-      <h3>Subheader</h3>
-      email: holmchristin@gmail.com
-      <br>tel: 0707311954      
+      <br>
+      <img src="static/img/profile.jpg" height="126px" width="192px">
+      <h3>Christin Holm</h3>
+      <b>mail:</b> 
+      <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">
+        holmchristin@gmail.com
+      </a>
+      <br><b>tel:</b> 0707311954      
     </div>
     <div class="col-md-5">
       <div class="row">
       </div>
-      
-        <img class="featurette-image img-responsive" src="static/img/calculator.png">
-      
-      <!--<img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">-->
     </div>
   </div>
 </div>
