--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% set nav = "home" %}
 {% extends "body_wrapper.html" %}
 {% block body %}
 
@@ -29,9 +30,13 @@
       <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
       <div class="container">
         <div class="carousel-caption">
-          <h1>Another example headline.</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+          <h1>Priser med RUT avdrag</h1>
+          <p>Med RUT avdraget blir det billigare!</p>
+          <p>
+            <a class="btn btn-lg btn-primary" href="#" role="button">
+              Läs mer
+            </a>
+          </p>
         </div>
       </div>
     </div>
@@ -39,49 +44,48 @@
       <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
       <div class="container">
         <div class="carousel-caption">
-          <h1>One more for good measure.</h1>
+          <h1>Undervisning på dina vilkor!</h1>
           <p>
-            Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+            Vi lägger upp en personlig plan och bla bla bla. 
           </p>
           <p>
             <a class="btn btn-lg btn-primary" href="#" role="button">
-              Browse gallery
+              Läs mer
             </a>
           </p>
         </div>
       </div>
     </div>
   </div>
-  <a class="left carousel-control" href="#" role="button" data-slide="prev">
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left">
     </span>
   </a>
-  <a class="right carousel-control" href="#" role="button" data-slide="next">
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right">
     </span>
   </a>
 </div>
 <div class="container marketing">
-  <!-- Three columns of text below the carousel -->
   <div class="row">
     <div class="col-lg-4">
       <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
-    </div><!-- /.col-lg-4 -->
+      <h2>Någonting 1</h2>
+      <p>Lite text här. Bla bla bla bla bla bla blaaab bblla.</p>
+      <p><a class="btn btn-default" href="#" role="button">Läs mer »</a></p>
+    </div>
     <div class="col-lg-4">
       <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-      <h2>Heading</h2>
-      <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+      <h2>Någonting 2</h2>
+      <p>Lite annan text här. Bla bla bla bla blaab blaa bla blaaaa. </p>
       <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
-    </div><!-- /.col-lg-4 -->
+    </div>
     <div class="col-lg-4">
       <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      <h2>Någonting 3</h2>
+      <p>Bla bla bla bl..addas afsdsdf dsffdgg gdsgfd.</p>
       <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
-    </div><!-- /.col-lg-4 -->
+    </div>
   </div>
 </div>
   {% endblock %}
