--- a/templates/body_wrapper.html
+++ b/templates/body_wrapper.html
@@ -119,7 +119,7 @@
                          src="static/img/glyphicons_280_settings.png">
                     </a>
                   </li>
-                  <li style="margin-top:7px;">
+                  <li style="margin-top:7px;margin-left:10px;">
                     <button id="logout_btn" type="submit" 
                             class="btn btn-success">
                       Logga ut
