--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,9 @@
             Info text här, bla bla bla bla blalbala.
           </p>
           <p>
-            <a class="btn btn-lg btn-primary" href="#" role="button">
-              Registrera nu
+            <a class="btn btn-lg btn-primary register_click"
+               href="#" role="button">
+              Gör en intresseanmälan nu!
             </a>
           </p>
         </div>
