--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <div class="carousel-caption">
           <h1>Räkna med Christin</h1>
           <p>
-            Info text här, bla bla bla bla blalbala.
+            Höj ditt betyg! Känn att du kan lära dig matematik!
           </p>
           <p>
             <a class="btn btn-lg btn-primary register_click"
@@ -34,7 +34,7 @@
           <h1>Priser med RUT avdrag</h1>
           <p>Med RUT avdraget blir det billigare!</p>
           <p>
-            <a class="btn btn-lg btn-primary" href="#" role="button">
+            <a class="btn btn-lg btn-primary" href="/rut_info" role="button">
               Läs mer
             </a>
           </p>
@@ -47,10 +47,10 @@
         <div class="carousel-caption">
           <h1>Undervisning på dina vilkor!</h1>
           <p>
-            Vi lägger upp en personlig plan och bla bla bla. 
+            Lugn miljö i Villa Holm eller hemma hos dig !
           </p>
           <p>
-            <a class="btn btn-lg btn-primary" href="#" role="button">
+            <a class="btn btn-lg btn-primary" href="/info" role="button">
               Läs mer
             </a>
           </p>
