--- a/templates/register.html
+++ b/templates/register.html
@@ -26,6 +26,13 @@
   </div>
 
   <div class="form-group">
+    <label class="col-lg-3 control-label">Address</label>
+    <div class="col-lg-5">
+      <input type="text" class="form-control" name="adress" />
+    </div>
+  </div>
+
+  <div class="form-group">
     <label class="col-lg-3 control-label">Telefon</label>
     <div class="col-lg-5">
       <input type="text" class="form-control" name="phone" />
