--- a/templates/about.html
+++ b/templates/about.html
@@ -9,11 +9,14 @@
   <div class="row featurette">
     <div class="col-md-7">
       <h2>Info</h2>
-      <h3>Subheader</h3>
-      asdasdfsdf dfsadf dsfsadfsafsdf sadfsdf
+      
     </div>
     <div class="col-md-5">
       <div class="row">
+	Tycker du att det är svårt med matematik eller vill du bara höja ditt betyg så är du välkommen att höra av dig. 
+	 Undervisningen sker i Villa Holm i Rönninge med de bästa förutsättningar för att du ska lära dig matematik .
+	 Uppföljning, repetition inför prov, nationella prov, fylla kunskapsluckor från tidigare år, bli säker på matematik i den kursen/området du inte behärskar.
+      
       </div>
       <img class="featurette-image img-responsive"
            src="static/img/info_picture.jpg">
