--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -53,13 +53,33 @@ body {
   height: 500px;
   background-color: #777;
 }
-.carousel-inner > .item > img {
-  position: absolute;
+/*.carousel-inner > .item > img {
+  pposition: absolute;
+      display: none;
+    -webkit-transition: 2s ease-in-out left;
+    -moz-transition: 2s ease-in-out left;
+    -o-transition: 2s ease-in-out left;
+    transition: 2s ease-in-out left;
   top: 0;
   left: 0;
   min-width: 100%;
   height: 500px;
+  width: 100%; // Add this
+}*/
+
+.carousel-inner>.item>img, .carousel-inner>.item>a>img, .carousel-inner>img {
+display: block;
+height: auto;
+max-width: 100%;
+height: 100%;
+line-height: 1;
+//width: 100%; // Add this
 }
+
+.carousel-inner .active.left { left: -33%; }
+.carousel-inner .next        { left:  33%; }
+.carousel-inner .prev        { left: -33%; }
+.carousel-control.left,.carousel-control.right {background-image:none;}
 
 
 
