--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 <!-- Change the "action" attribute to your back-end URL -->
 <form id="registrationForm" method="post" class="form-horizontal" action="/interest">
   <div class="form-group">
-    <label class="col-lg-3 control-label">Email address</label>
+    <label class="col-lg-3 control-label">Email</label>
     <div class="col-lg-5">
       <input type="text" class="form-control" name="email" />
     </div>
