added new texts

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,13 +10,20 @@
     <div class="col-md-7">
       <h2>Kontakt</h2>
       <br>
-      <img src="static/img/profile.jpg" height="126px" width="192px">
+      <img class="img-responsive" src="static/img/IMG_1577.JPG"
+	   height="126px" width="192px">
       <h3>Christin Holm</h3>
       <b>mail:</b> 
-      <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">
+      <a href="mailto:holmchristin@gmail.com?Subject=Räkna%20med%20christin:%20" target="_top">
         holmchristin@gmail.com
       </a>
       <br><b>tel:</b> 0707311954      
+      
+      <div style="margin-top:40px">
+	Bankgiro: 344-7778<br>
+	Org.nr: 556941-7305<br>
+	Innehar F-skattebevis
+      </div>
     </div>
     <div class="col-md-5">
       <div class="row">
