--- a/templates/index.html
+++ b/templates/index.html
@@ -10,18 +10,17 @@
   </ol>
   <div class="carousel-inner">
     <div class="item active">
-
       <div class="container">
 	<img src="/static/img/IMG_1622.JPG" alt="First slide" class="img-responsive">
         <div class="carousel-caption">
           <h1>Räkna med Christin</h1>
           <p>
-            Höj ditt betyg! Känn att du kan lära dig matematik!
+	    Matematikundervisning på grundskole- och gymnasienivå
           </p>
           <p>
             <a class="btn btn-lg btn-primary register_click"
                href="#" role="button">
-              Gör en intresseanmälan nu!
+              Intresseanmälan
             </a>
           </p>
         </div>
@@ -31,8 +30,8 @@
       <div class="container">
 	<img src="/static/img/IMG_1657.JPG" alt="Second slide" class="img-responsive">
         <div class="carousel-caption">
-          <h1>Priser med RUT avdrag</h1>
-          <p>Med RUT avdraget blir det billigare!</p>
+          <h1>RUT</h1>
+          <p>Inget här?</p>
           <p>
             <a class="btn btn-lg btn-primary" href="/rut_info" role="button">
               Läs mer
@@ -48,7 +47,7 @@
 	<div class="carousel-caption">
           <h1>Undervisning på dina vilkor!</h1>
           <p>
-            Lugn miljö i Villa Holm eller hemma hos dig !
+	    Vi lägger upp en personlig plan.
           </p>
           <p>
             <a class="btn btn-lg btn-primary" href="/info" role="button">
@@ -68,22 +67,24 @@
     </span>
   </a>
 </div>
+<div class="row col-12" height="10px" style="background-color: grey"></div>
 <div class="container marketing">
   <div class="row">
     <div class="col-lg-4">
-      <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+      <img class="img-circle" src="/static/img/IMG_1602.JPG" alt="Generic placeholder image"
+	   style="width: 140px; height: 140px;">
       <h2>Någonting 1</h2>
-      <p>Lite text här. Bla bla bla bla bla bla blaaab bblla.</p>
+      <p>Tänk att matematik kan vara roligt och intressant.</p>
       <p><a class="btn btn-default" href="#" role="button">Läs mer »</a></p>
     </div>
     <div class="col-lg-4">
-      <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+      <img class="img-circle" src="/static/img/IMG_1607.JPG" alt="Generic placeholder image" style="width: 140px; height: 140px;">
       <h2>Någonting 2</h2>
       <p>Lite annan text här. Bla bla bla bla blaab blaa bla blaaaa. </p>
       <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
     </div>
     <div class="col-lg-4">
-      <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+      <img class="img-circle" src="/static/img/IMG_1624.JPG" alt="Generic placeholder image" style="width: 140px; height: 140px;">
       <h2>Någonting 3</h2>
       <p>Bla bla bla bl..addas afsdsdf dsffdgg gdsgfd.</p>
       <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
@@ -91,10 +92,5 @@
   </div>
 </div>
 <script src="/static/js/carousel.js"></script>
-<!--<script>
-  $('.carousel').carousel({
-   interval: 10000
-  });
- </script>-->   
   {% endblock %}
   
