--- a/templates/prices.html
+++ b/templates/prices.html
@@ -34,6 +34,11 @@
          
         </ul>
       </p>
+      <p style="margin-top:40px">
+	Alla priser är inkl moms.
+	<br>
+	Jag har F-skattsedel och betalar moms.
+      </p>
     </div>
     <div class="col-md-5">
       <div class="row">
