--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -51,8 +51,9 @@ body {
 /* Declare heights because of positioning of img element */
 .carousel .item {
   height: 500px;
-  background-color: #777;
+  background-color: #5f5f5f;
 }
+
 /*.carousel-inner > .item > img {
   pposition: absolute;
       display: none;
@@ -68,19 +69,18 @@ body {
 }*/
 
 .carousel-inner>.item>img, .carousel-inner>.item>a>img, .carousel-inner>img {
-display: block;
-height: auto;
-max-width: 100%;
-height: 100%;
-line-height: 1;
-//width: 100%; // Add this
+    display: block;
+    height: auto;
+    max-width: 100%;
+    height: 100%;
+    min-height: 100px;
+    line-height: 1;
+    //width: 100%; // Add this
 }
 
-.carousel-inner .active.left { left: -33%; }
-.carousel-inner .next        { left:  33%; }
-.carousel-inner .prev        { left: -33%; }
-.carousel-control.left,.carousel-control.right {background-image:none;}
-
+.carousel-inner>.item>p {
+    background-color: red;
+}
 
 
 /* MARKETING CONTENT
