--- a/templates/about.html
+++ b/templates/about.html
@@ -9,16 +9,20 @@
   <div class="row featurette">
     <div class="col-md-7">
       <h2>Info</h2>
-      Tycker du att det är svårt med matematik eller vill du bara höja ditt betyg så är du välkommen att höra av dig. 
-      Undervisningen sker i Villa Holm i Rönninge med de bästa förutsättningar för att du ska lära dig matematik .
-      Uppföljning, repetition inför prov, nationella prov, fylla kunskapsluckor från tidigare år, bli säker på matematik i den kursen/området du inte behärskar.
-
+      Bli säker på matematik i den kursen/området som du  just nu läser på grundskole- eller gymnasienivå. 
+      <br>
+      Tycker du att det är svårt med matematik eller vill du bara höja ditt betyg så är du välkommen att höra av dig. <br>
+      Undervisningen sker i Villa Holm i Rönninge med de bästa förutsättningar för att du ska lära dig matematik  eller hemma hos dig.
+      <br><br>
+      Jag har erfarenhet som matematiklärare från  grundskola och gymnasium.
+      <br>
+      Utbildade mig för 10 år sedan på lärarhögskolan i Stockholm.
     </div>
     <div class="col-md-5">
       <div class="row">      
       </div>
       <img class="featurette-image img-responsive"
-           src="static/img/info_picture.jpg">
+           src="static/img/IMG_1624.JPG">
     </div>
   </div>
 </div>
