started working on pages in database, pages representes the different pages on the webpage. Each page has an array with fields.

--- a/templates/body_wrapper.html
+++ b/templates/body_wrapper.html
@@ -80,10 +80,10 @@
                     <li><a href="#">Lägg till video</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">Ändra</li>
-                    <li><a href="#">Startsida</a></li>
-                    <li><a href="#">Info</a></li>
-                    <li><a href="#">Priser</a></li>
-                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="/edit_text?field=startsida">Startsida</a></li>
+                    <li><a href="/edit_text?field=info">Info</a></li>
+                    <li><a href="/edit_text?field=priser">Priser</a></li>
+                    <li><a href="/edit_text?field=kontakt">Kontakt</a></li>
                   </ul>
                 </li>
                 {% endif  %}
