Added users page and a edit_user page. Working with database.

--- a/templates/change_text.html
+++ b/templates/change_text.html
@@ -8,7 +8,7 @@
   </div>
   <div class="row featurette">
     <div class="col-md-7">
-      <h2>Ändra {{args['field']}}</h2>
+      <h2>Ändra {{args['page']}}</h2>
       <div>
 	<textarea col="4" rows="4" text="yoo"></textarea>
       </div>
