--- a/templates/body_wrapper.html
+++ b/templates/body_wrapper.html
@@ -12,19 +12,19 @@
     <title>Räkna med Christin</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/bootstrap-dialog.min.css" rel="stylesheet"
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-dialog.min.css" rel="stylesheet"
           type="text/css" />
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="static/js/ie-emulation-modes-warning.js"></script>
+    <script src="/static/js/ie-emulation-modes-warning.js"></script>
 
     <!-- Custom styles for this template -->
-    <link href="static/css/carousel.css" rel="stylesheet">
+    <link href="/static/css/carousel.css" rel="stylesheet">
     <style type="text/css"></style>
     <style id="holderjs-style" type="text/css"></style>
     
-    <link href="static/css/nav.css" rel="stylesheet">
+    <link href="/static/css/nav.css" rel="stylesheet">
   </head>
   
   <body>
@@ -33,7 +33,8 @@
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
           <div class="container">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+              <button type="button" class="navbar-toggle collapsed"
+                      data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -41,7 +42,7 @@
               </button>
            
               <a class="nav" href="/">
-                <img src="/static/img/logo_min.png" height="50px">
+                <img src="/static/img/logo2.png" height="50px">
               </a>
             </div>
             <div class="navbar-collapse collapse">
@@ -78,6 +79,7 @@
                   </a>
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="#">Lägg till video</a></li>
+                    <li><a href="/users">Användare</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">Ändra</li>
                     <li><a href="/edit_text?field=startsida">Startsida</a></li>
@@ -123,8 +125,9 @@
                    {% endif %}
                    >
                   <a href="/settings">
-                    <img style="max-width:78%;max-height:78%"
-                         src="static/img/glyphicons_280_settings.png">
+                    <!--<img style="max-width:78%;max-height:78%;"
+                         src="/static/img/glyphicons_280_settings.png">-->
+                    <span class="glyphicon glyphicon-user"></span>
                   </a>
                 </li>
                 <li style="margin-top:7px;margin-left:10px;">
@@ -134,7 +137,8 @@
                   </button>
                   {% endif %}
                   <p id="wrong_login"
-                     style="float:right;margin-top:15px;color:red;display:none;">
+                     style="float:right;margin-top:15px;color:red;
+                            display:none;">
                     Fel användarnamn eller lösenord!
                   </p>
                 </li>
@@ -144,7 +148,7 @@
        </div> 
      </div>
   </div>   
-  <script src="static/js/jquery.min.js"></script>
+  <script src="/static/js/jquery.min.js"></script>
   {% block body %}
   {% endblock %}
 
@@ -157,19 +161,22 @@
   <!-- Bootstrap core JavaScript
        ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="static/js/bootstrap.min.js"></script>
-  <script src="static/js/docs.min.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
+  <script src="/static/js/docs.min.js"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="static/js/ie10-viewport-bug-workaround.js"></script>
-  <script src="static/js/bootstrap-dialog.min.js"></script>
-  <script src="static/js/nav_bar.js"></script>
+  <script src="/static/js/ie10-viewport-bug-workaround.js"></script>
+  <script src="/static/js/bootstrap-dialog.min.js"></script>
+  <script src="/static/js/nav_bar.js"></script>
   
   <div id="global-zeroclipboard-html-bridge"
        class="global-zeroclipboard-container"
-       style="position: absolute; left: 0px; top: -9999px; width: 15px; height: 15px; z-index: 999999999;"
+       style="position: absolute; left: 0px; top: -9999px; width: 15px;
+              height: 15px; z-index: 999999999;"
        title="" data-original-title="Copy to clipboard">      
-    <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" id="global-zeroclipboard-flash-bridge" width="100%" height="100%">
-      <param name="movie" value="/static/flash/ZeroClipboard.swf?noCache=1409470907006">
+    <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"
+            id="global-zeroclipboard-flash-bridge" width="100%" height="100%">
+      <param name="movie"
+             value="/static/flash/ZeroClipboard.swf?noCache=1409470907006">
       <param name="allowScriptAccess" value="sameDomain">        
       <param name="scale" value="exactfit">
       <param name="loop" value="false">
@@ -177,7 +184,10 @@
       <param name="quality" value="best">
       <param name="bgcolor" value="#ffffff">
       <param name="wmode" value="transparent">
-      <param name="flashvars" value="trustedOrigins=getbootstrap.com%2C%2F%2Fgetbootstrap.com%2Chttp%3A%2F%2Fgetbootstrap.com">
+      <param name="flashvars" 
+             value="trustedOrigins=getbootstrap.com
+                    %2C%2F%2Fgetbootstrap.com%2C
+                    http%3A%2F%2Fgetbootstrap.com">
       <embed src="/static/flash/ZeroClipboard.swf?noCache=1409470907006"
              loop="false" menu="false" quality="best" bgcolor="#ffffff"
              width="100%" height="100%"
