Interests is now added to database correctly. Notificaiton will show when new interests has been done when logged in as admin. TODO: mark as read is only local in javascript, need to do a call to the server to mark it as read/unread whenever wanted

--- a/templates/body_wrapper.html
+++ b/templates/body_wrapper.html
@@ -90,6 +90,18 @@
                 </li>
                 {% endif  %}
               </ul>
+              {% if admin %}
+              {% if args["unread_interest_count"] > 0 %}
+              <ul  class="nav navbar-nav navbar-center">
+                <li>
+                  <a href="/show_interests"> 
+                    <span class="glyphicon glyphicon-envelope"></span>
+                    {{args["unread_interest_count"]}}st olästa 
+                  </a>
+                </li>
+              </ul>
+              {% endif %}
+              {% endif %}
               <ul class="nav navbar-nav navbar-right" 
                   style="margin-right:10px;">
                 {% if user|length == 0 %}
