--- a/templates/users.html
+++ b/templates/users.html
@@ -43,5 +43,5 @@
     </table>
   </div>
 </div>
-<script src="static/js/settings.js"></script>
+<script src="/static/js/settings.js"></script>
 {% endblock %}
