--- a/templates/change_text.html
+++ b/templates/change_text.html
@@ -1,16 +1,26 @@
 {% macro add_field(fields) -%}
-{{fields}}
 {% for key, value in fields.iteritems() %}
 {% if value is mapping %}
-<div>
-  <h3>{{key}}</h3><br>
-  <textarea col="4" rows="4" text="yoo"> {{value}}</textarea>
-</div>      
+<div class="row"> 
+  {% set type = value["type"] %}
+  <div class="form-group">
+    <label style="width:100px;"><h3>{{key}}</h3></label>
+    <div class="input-group">
+      {% if type == "text" %}
+      <textarea class="form-control" rows="4" name="{{key}}" style="width:500px;"> {{value["value"]}}</textarea>
+      {% elif type in ["small-text", "image"] %}
+      <input class="form-control" type="text" name="{{key}}" style="width:200px;" value='{{value["value"]}}' />
+      {% endif %}
+      <button class="btn btn-primary" style="position:absolute;bottom:0;" >Spara</button>
+    </div>
+  </div>
+</div>
 {% else %}
-<h1>len={{value|length}}</h1>
 {% for i in range(value|length) %}
 <h2>{{key}}: {{i}}</h3><br>
-{{ add_field(value[i]) }}
+<form role="form" class="form-inline">
+  {{ add_field(value[i]) }}
+</form>
 {% endfor %}
 {% endif %}
 {% endfor %}
@@ -25,9 +35,10 @@
   <div class="row" style="height:100px;">
   </div>
   <div class="row featurette">
-    <div class="col-md-7">
-      <h2>Ändra {{args['page']['name']}}</h2>
+    <div class="col-md-12">
+      <h1>Ändra {{args['page']['name']}}</h1>
       {{ add_field(args['page']['fields']) }}
+      <button type="submit" class="btn btn-lg btn-primary pull-right">Spara</button>
     </div>
   </div>
 </div>
